--- a/_posts/2015-11-29-Im-in.markdown
+++ b/_posts/2015-11-29-Im-in.markdown
@@ -2,7 +2,7 @@
 layout: post
 title: "I'm in"
 date: 2015-11-29 15:43
-categories: others
+categories: Non-tech
 ---
 
 This is the first day I move in the github pages. It take me several hours to finish the prepration. But I\'m here anyway~
