add jekyll usage

--- a/_posts/date-mining/2015-12-05-Chap2.md
+++ b/_posts/date-mining/2015-12-05-Chap2.md
@@ -194,7 +194,7 @@ $$
 * Non-negativity: $$ d(i,j) \geq 0 $$
 * Identity of indiscernibles: $$ d(i,i) = 0 $$
 * Symmetry: d(i,j) = d(j,i)
-* Triangle inequality: d(i,j) \leq d(i,k) + d(k,j)
+* Triangle inequality: $$d(i,j) \leq d(i,k) + d(k,j)$$
 
 ### Minkowski distance
 
@@ -226,7 +226,12 @@ d(i,j) = \frac{\sum_{f=1}^{p} \delta_{ij}^{(f)} d_{ij}^{(f)}}
 {\sum_{f=1}^{p} \delta_{ij}^{(f)}}
 $$
 
-* *f* is numeric: $$d_{ij}^{(f)} = \frac{|x_{if} - x_{jf}|}{\max_hx_{hf} - \min_hx_{hf}}$$
+* *f* is numeric:
+
+$$
+d_{ij}^{(f)} = \frac{|x_{if}-x_{jf}|}{\max_{h} x_{hf} - \min_{h} x_{hf}}
+$$
+
 * *f* is nominal or binary: $$d_{ij}^{(f)} = 0$$ if $$x_{if} = x_{jf}$$; otherwise, $$d_{ij}^{(f)} = 1$$
 * *f* is ordinal: $$
 z_{if} = \frac{r_{if} - 1}{M_f - 1}$$
