--- a/_posts/NG/2016-4-14-支持向量机.md
+++ b/_posts/NG/2016-4-14-支持向量机.md
@@ -2,7 +2,7 @@
 layout: post
 title: "支持向量机"
 date: 2016-4-14
-categorie
+categorie: algorithm
 ---
 # 支持向量机
 这一章主要学习支持向量机。支持向量机是目前最好的监督学习算法之一。但支持向量机本身难度较大，需要较强的数学基础。假如抛开数学部分，其本质就是用拉格朗日对偶法计算最大间隔，利用核函数简化高维映射的计算，用SMO算法更新参数。本文也将根据NG讲义的这一顺序展开。此外，[这里](http://blog.csdn.net/macyang/article/details/38782399)有一份比较完善的中文入门资料。
