--- a/_posts/NG/2016-4-14-支持向量机.md
+++ b/_posts/NG/2016-4-14-支持向量机.md
@@ -28,7 +28,11 @@ $$\hat{\gamma}^{(i)}=y^{(i)}(\omega^Tx+b)$$
 
 $$\hat{\gamma}=\min_{i=1,\cdots,m}\hat{\gamma}^{(i)}$$
 
-下面的问题是如何找出$$\gamma^{(i)}$$的表达式，分割面与$$\omega$$永远是正交的。对于训练样本在分割面上的投影，可以表示成$$x^{(i)}-\gamma^{(i)}\cdot\omega/| |\omega| |$$，又因为投影点在分割面上，所以有：
+下面的问题是如何找出$$\gamma^{(i)}$$的表达式，分割面与$$\omega$$永远是正交的。对于训练样本在分割面上的投影，可以表示成 
+
+$$x^{(i)}-\gamma^{(i)} \cdot \frac{\omega}{| |\omega| |}$$
+
+又因为投影点在分割面上，所以有：
 
 $$\omega^T(x^{(i)}-\gamma^{(i)}\frac{\omega}{| |\omega| |})+b=0$$
 
