add linear invariance ps

--- a/_posts/ng/2016-5-4-glm-ps.md
+++ b/_posts/ng/2016-5-4-glm-ps.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "广义线性模型习题"
-subtitle: "斯坦福大学机器学习习题集一"
+subtitle: "斯坦福大学机器学习习题集一之三"
 date: 2016-5-4
 author: "Anyinlover"
 catalog: true
