添加爬虫三篇，Hadoop两篇以及TLCL遗留文章，清理了draft

--- a/_posts/2018-01-14-人生的意义.md
+++ b/_posts/2018-01-14-人生的意义.md
@@ -1,4 +1,8 @@
-# 人生的意义
+---
+category: 哲学
+tags:
+  - 人生
+---
 
 人生的意义这个问题，我是在大约十六七岁高中时期第一次开始思考的，每天晚上熄灯后就在床上苦思冥想，偶尔也会和邻床一个爱好哲学的同学讨论几句，当时可能受马克思的影响比较深远，最后得到的答案是：幸福感是人生和人类的最终目标！
 
