--- a/_posts/生活/2018-01-14-人生的意义.md
+++ b/_posts/生活/2018-01-14-人生的意义.md
@@ -5,7 +5,7 @@ tags:
   - 人生
 ---
 
-人生的意义这个问题，我是在大约十六七岁高中时期第一次开始思考的，每天晚上熄灯后就在床上苦思冥想，偶尔也会和邻床一个爱好哲学的同学讨论几句，当时可能受马克思的影响比较深远，最后得到的答案是：幸福感是人生和人类的最终目标！
+人生的意义这个问题，我是在大约十六七岁高中时期第一次开始思考的，每天晚上熄灯后就在床上苦思冥想，偶尔也会和邻床一个爱好哲学的同学讨论几句，当时受马克思的影响比较深，最后得到的答案是：幸福感是人生和人类的最终目标！
 
 在前不久我仍然把这句我个人邮箱签名的话作为人生意义的答案，但最近看了一本书《大问题》，里面有个问题让我重新思考起人生的意义，那个问题大意如此：
 
@@ -91,7 +91,7 @@ tags:
 
 人生的意义假如有所指向，那么就可以不停追问下去，比如假如说人生在于让人幸福。但幸福于人又有何意义呢？如此追问下去，人生的意义将无处可寻，最终不得不把人生归于荒谬或者上帝。作为一个无神论者，如何能够让人生逃离荒谬的陷阱？书中的这段话给我提供了思路。
 
-> 生活的意义只有在我们的生活情境中才能找到，而不能诉诸生活以外的什么东西。对于一个真正为上帝活着的人而言，把自己献给上帝回答了生活的意义；对于一个真正为孩长活着的人而言，孩子回答了生活的意义。具有讽刺意味的是，只要一个人能够真正把生活致力于生活毫无意义这一命题，把人们通常赋予生活的有时是自以为是的错误而有害的意义清除掉，那么虚无主义——即认为生活毫无意义——同样可以赋予生活一种意义。加缪似乎就是以这种方式活着的。
+> 生活的意义只有在我们的生活情境中才能找到，而不能诉诸生活以外的什么东西。对于一个真正为上帝活着的人而言，把自己献给上帝回答了生活的意义；对于一个真正为孩子活着的人而言，孩子回答了生活的意义。具有讽刺意味的是，只要一个人能够真正把生活致力于生活毫无意义这一命题，把人们通常赋予生活的有时是自以为是的错误而有害的意义清除掉，那么虚无主义——即认为生活毫无意义——同样可以赋予生活一种意义。加缪似乎就是以这种方式活着的。
 
 让人生的意义最终回到人生本身，让意义成为个人有意识的选择，我们就自然而然的破解了荒谬。在这一点上，加缪的《西西弗斯的神话》说的是对的，那就是:
 
